# building-automation

./: Cargo.toml  README.md
.cargo/: config.toml
Results_4_rules/: Energy_evaluation_2023-01-17_20_17_19.txt  Evaluation_2023-01-17_20_17_17.txt
Results_5_rules/: Energy_evaluation_2023-01-17_20_57_48.txt  Evaluation_2023-01-17_20_57_46.txt
specification_files/: downlink_specification_file_2_light.json  uplink_specification_file_1.json  uplink_specification_file_2_light.json  uplink_specification_file_3.json
src/: evaluation.rs  human.rs  lib.rs  main.rs  room.rs  weather.rs
weather_data/: produkt_n_termin_19470101_20211231_00232.txt
