[package]
name = "building-automation"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
rand = "0.8.5"
chrono = "0.4.23"
elorapi = {git = "https://github.com/boehme-thomas/elorapi", version="0.1.2"}
rubalosim = {git = "https://github.com/boehme-thomas/rubalosim", version="0.1.1"}